--- a/WebsiteBanDoGiaDung/packages.config
+++ b/WebsiteBanDoGiaDung/packages.config
@@ -15,7 +15,7 @@
   <package id="Microsoft.Extensions.Logging.Abstractions" version="1.0.0" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
-  <package id="NBitcoin" version="7.0.6" targetFramework="net48" requireReinstallation="true" />
+  <package id="NBitcoin" version="7.0.6" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
   <package id="PagedList" version="1.17.0.0" targetFramework="net472" />
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net472" />
@@ -24,11 +24,11 @@
   <package id="System.Collections.Concurrent" version="4.0.12" targetFramework="net48" />
   <package id="System.Diagnostics.Debug" version="4.0.11" targetFramework="net48" />
   <package id="System.Globalization" version="4.0.11" targetFramework="net48" />
-  <package id="System.Linq" version="4.1.0" targetFramework="net48" requireReinstallation="true" />
-  <package id="System.Reflection" version="4.1.0" targetFramework="net48" requireReinstallation="true" />
+  <package id="System.Linq" version="4.1.0" targetFramework="net48" />
+  <package id="System.Reflection" version="4.1.0" targetFramework="net48" />
   <package id="System.Resources.ResourceManager" version="4.0.1" targetFramework="net48" />
-  <package id="System.Runtime" version="4.1.0" targetFramework="net48" requireReinstallation="true" />
-  <package id="System.Runtime.Extensions" version="4.1.0" targetFramework="net48" requireReinstallation="true" />
-  <package id="System.Runtime.InteropServices" version="4.1.0" targetFramework="net48" requireReinstallation="true" />
+  <package id="System.Runtime" version="4.1.0" targetFramework="net48" />
+  <package id="System.Runtime.Extensions" version="4.1.0" targetFramework="net48" />
+  <package id="System.Runtime.InteropServices" version="4.1.0" targetFramework="net48" />
   <package id="WebGrease" version="1.6.0" targetFramework="net48" />
 </packages>
